# os-sem3-hw

./: CMakeLists.txt  README.md
1-shell-emulator/: CMakeLists.txt  README.md
1-shell-emulator/Inc/: Executor.h  Shell.h  ShellStatus.h  TokenParser.h
1-shell-emulator/Src/: Executor.c  Main.c  Shell.c  ShellStatus.c  TokenParser.c
1-shell-emulator/Tests/: ExecutorTest.cc  RunTests.cc  TokenParserTest.cc
1-shell-emulator/Tests/Data/Executor/: Text.input
1-shell-emulator/Tests/Data/TokenParser/: 4KBOfSpaces.expect  4KBOfSpaces.input  Easy.expect  Easy.input  EasyWithSpaces.input  LargeFile.expect  LargeFile.input
1-shell-emulator/Tests/Generators/: BigLorem.py  GenSpaces.py  Lorem.txt  PutSpaces.py  RemoveNewLines.py
2-duplex-pipe/: CMakeLists.txt  README.md
2-duplex-pipe/Inc/: DuplexPipe.h
2-duplex-pipe/Src/: DuplexPipe.c  Main.c
2-duplex-pipe/Tests/: CompareMd5.py  GenTestData.sh  RunTests.sh  run_tests.sh
3-ipc-comparison/: CMakeLists.txt  README.md
3-ipc-comparison/Inc/: Driver.hpp  FIFORx.h  FIFOTx.h  Helpers.h  IPCStatus.h  MQRx.h  MQTx.h  ShMemRx.h  ShMemTx.h
3-ipc-comparison/Inc/Drivers/: BaseBenchmark.hpp  BaseDriver.hpp  FifoDriver.hpp  MsgDriver.hpp  ShmDriver.hpp
3-ipc-comparison/Inc/IPC/: FIFORx.h  FIFOTx.h  Helpers.h  IPCStatus.h  MQRx.h  MQTx.h  ShMemRx.h  ShMemSync.h  ShMemTx.h
3-ipc-comparison/Scripts/: Plot.py  RunBenchmarks.sh  gen_benchmark.sh  run_benchmarks.sh
3-ipc-comparison/Src/: Fifo.cpp  Helpers.c  Msg.cpp  Shm.cpp
3-ipc-comparison/Src/Drivers/: BaseDriver.cpp  FifoDriver.cpp  MsgDriver.cpp  ShmDriver.cpp
3-ipc-comparison/Src/Executables/: Fifo.cpp  FifoBenchmark.cpp  Msg.cpp  MsgBenchmark.cpp  Shm.cpp  ShmBenchmark.cpp
3-ipc-comparison/Src/IPC/: FIFORx.c  FIFOTx.c  Helpers.c  IPCStatus.c  MQRx.c  MQTx.c  ShMemRx.c  ShMemSync.c  ShMemTx.c
3-ipc-comparison/Tests/: GenTests.py  gen_tests.sh  run_tests.sh
4-monte-carlo/: CMakeLists.txt  README.md
4-monte-carlo/Inc/: Algorithm.h  Driver.h  MCAlgorithm.h  MonteCarlo.h  MonteCarloMT.h  Status.h  TQMonitor.h  TaskQueue.h  ThreadPool.h  TnStatus.h  WQMonitor.h  Worker.h  WorkerArray.h  WorkerContent.h  WorkerQueue.h
4-monte-carlo/Scripts/: Plot.py
4-monte-carlo/Src/: Driver.c  MCAlgorithm.c  Main.c  MonteCarlo.c  MonteCarloMT.c  RunBenchmark.c  TQMonitor.c  TaskQueue.c  ThreadPool.c  TnStatus.c  WQMonitor.c  Worker.c  WorkerContent.c  WorkerQueue.c
4-monte-carlo/Tests/: RunTests.cpp  Test.cpp
4-monte-carlo/ThreadPool/: CMakeLists.txt
4-monte-carlo/ThreadPool/Inc/: Status.h  TQMonitor.h  ThreadPool.h  WQMonitor.h  Worker.h  WorkerArray.h  WorkerQueue.h
4-monte-carlo/ThreadPool/Src/: TQMonitor.c  ThreadPool.c  WQMonitor.c  Worker.c  WorkerArray.c
4-monte-carlo/ThreadPool/Tests/: RunTests.cpp
5-signal-file-transmission/: CMakeLists.txt  README.md
5-signal-file-transmission/Inc/: Common.h  QMonitor.h  Queue.h  Receiver.h  RxDriver.h  RxMain.h  Transmitter.h  TxDriver.h  TxMain.h
5-signal-file-transmission/Src/: Common.c  Queue.c  Receiver.c  RxDriver.c  RxMain.c  Transmitter.c  TxDriver.c  TxMain.c
5-signal-file-transmission/Tests/: GenTestData.sh  GenTests.py  RunTest.c
6-backup-daemon/: CMakeLists.txt
6-backup-daemon-old/: CMakeLists.txt
6-backup-daemon-old/Inc/: BackupProducer.h  DirectoryWatcher.h  Logger.h  SignalInterface.h  Stage.h  WatchDescriptorList.h  WatchDescriptorMap.h  WatchDescriptorTree.h
6-backup-daemon-old/Src/: DirectoryWatcher.c  Logger.c  StageQueue.c  WatchDescriptorList.c  WatchDescriptorMap.c
6-backup-daemon-old/Tests/: DWTest.c  INotifyDeleteSelfExample.c  OpenDirTest.c
6-backup-daemon/Exec/: SetPeriod.cpp  StartService.cpp
6-backup-daemon/Inc/: BackupProducer.hpp  BackupService.h  BackupService.hpp  DBackuperList.h  DBackuperManager.h  DescriptorWrapper.hpp  DirectoryBackuper.h  DirectoryWatcher.h  DirectoryWatcher.hpp  FSMonitor.hpp  FifoChannel.hpp  FileTree.hpp  Helpers.hpp  HwBackupException.hpp  IEventObserver.hpp  INotifyWrapper.hpp  Incremental.hpp  Logger.h  Logger.hpp  Macro.hpp  PThreadWrapper.hpp  PathTree.hpp  RPCInterface.h  RequestHandler.h  Selector.hpp  Stage.h  Stage.hpp  StageQueue.h  StateValueWrapper.hpp  StderrWarning.hpp  WDCache.hpp  WatchDescriptorList.h  WatchDescriptorMap.h
6-backup-daemon/Scripts/: Restore.py
6-backup-daemon/Src/: BackupProducer.cpp  BackupService.cpp  DescriptorWrapper.cpp  DirectoryWatcher.c  FSMonitor.cpp  FifoChannel.cpp  FileTree.cpp  HwBackupException.cpp  IEventObserver.cpp  INotifyWrapper.cpp  Incremental.cpp  Logger.c  Logger.cpp  PThreadWrapper.cpp  PathTree.cpp  Selector.cpp  Stage.c  Stage.cpp  StageQueue.c  WDCache.cpp  WatchDescriptorList.c  WatchDescriptorMap.c
6-backup-daemon/Test/: BackupTest.cpp  FSMTest.cpp
6-backup-daemon/Tests/: DWTest.c
